--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,10 +108,22 @@ jobs:
 
     steps:
       - name: Check proposed commit message
+        id: check_proposed_commit_message
         run: |
-          proposed_commit_message=$(awk '/\*\*Proposed commit message: (wrap lines at 72 characters)\*\*:/,/---/' <<< "${{ github.event.pull_request.body }}")
-          if ! grep -q '[^[:space:]]' <<< "$proposed_commit_message"; then
-            printf "Please fill in the proposed commit message section in the pull request description."
-            exit 1
-          fi
+          proposed_commit_message=$(awk '/\*\*Proposed commit message: \(wrap lines at 72 characters\)\*\*/,/asdfghjk/' <<< "${{ github.event.pull_request.body }}" | tail -n +2 | head -n -3)
+          proposed_commit_message=$(echo "$proposed_commit_message" | python -c "import re, sys; text = sys.stdin.read(); cleaned_text = re.sub(r'<!--.*?-->', '', text, flags=re.DOTALL); print(cleaned_text)")
+          echo "Proposed commit message: $proposed_commit_message"
+          echo "message_filled=$([[ $proposed_commit_message =~ [^[:space:]] ]] && echo 'true' || echo 'false')" >> $GITHUB_ENV
+      - name: Leave comment if proposed commit message is missing
+        if: ${{ steps.check_proposed_commit_message.outputs.message_filled == 'false' }}
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            <!-- PR_AUTOCOMMENT_MARKER -->
+            :warning: **Missing Proposed Commit Message**: To streamline the review process, please include a proposed commit message.
+
+            For more details on our commit message format, see [Git Conventions](https://se-education.org/guides/conventions/git.html).
+
+            Thank you for contributing!
 
