--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,23 +107,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check proposed commit message
-        id: check_proposed_commit_message
+      - uses: actions/checkout@v3
+      - name: Preprocess PR Body with Python
         run: |
-          proposed_commit_message=$(awk '/\*\*Proposed commit message: \(wrap lines at 72 characters\)\*\*/,/asdfghjk/' <<< "${{ github.event.pull_request.body }}" | tail -n +2 | head -n -3)
-          proposed_commit_message=$(echo "$proposed_commit_message" | python -c "import re, sys; text = sys.stdin.read(); cleaned_text = re.sub(r'<!--.*?-->', '', text, flags=re.DOTALL); print(cleaned_text)")
+          python scripts/process_message.py "${{ github.event.pull_request.body }}" > processed_body.txt
+        shell: bash
+
+      - name: Extract Proposed Commit Message
+        run: |
+          processed_body=$(cat processed_body.txt)
+          proposed_commit_message=$(echo "$processed_body" | awk '/\*\*Proposed commit message: \(wrap lines at 72 characters\)\*\*/,/\*\*Checklist:\*\* :ballot_box_with_check:/' | tail -n +2 | head -n -3)
           echo "Proposed commit message: $proposed_commit_message"
-          echo "message_filled=$([[ $proposed_commit_message =~ [^[:space:]] ]] && echo 'true' || echo 'false')" >> $GITHUB_ENV
-      - name: Leave comment if proposed commit message is missing
-        if: ${{ steps.check_proposed_commit_message.outputs.message_filled == 'false' }}
-        uses: peter-evans/create-or-update-comment@v4
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            <!-- PR_AUTOCOMMENT_MARKER -->
-            :warning: **Missing Proposed Commit Message**: To streamline the review process, please include a proposed commit message.
-
-            For more details on our commit message format, see [Git Conventions](https://se-education.org/guides/conventions/git.html).
-
-            Thank you for contributing!
+          echo "message_filled=$(echo $proposed_commit_message | grep -q '[^[:space:]]'; echo $?)"
 
