--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,18 +105,35 @@ jobs:
   remind-pr-author:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
+    env:
+      message_filled: 'false'
 
     steps:
       - uses: actions/checkout@v3
       - name: Preprocess PR Body with Python
         run: |
-          python scripts/process_message.py "${{ github.event.pull_request.body }}" > processed_body.txt
+          echo "${{ github.event.pull_request.body }}" > pr_body.txt
+          python scripts/process_message.py pr_body.txt > processed_body.txt
         shell: bash
 
       - name: Extract Proposed Commit Message
         run: |
           processed_body=$(cat processed_body.txt)
+          echo "Processed body: $processed_body"
           proposed_commit_message=$(echo "$processed_body" | awk '/\*\*Proposed commit message: \(wrap lines at 72 characters\)\*\*/,/\*\*Checklist:\*\* :ballot_box_with_check:/' | tail -n +2 | head -n -3)
           echo "Proposed commit message: $proposed_commit_message"
-          echo "message_filled=$(echo $proposed_commit_message | grep -q '[^[:space:]]'; echo $?)"
+          echo "env.message_filled=$([[ $proposed_commit_message =~ [^[:space:]] ]] && echo 'true' || echo 'false')" >> $GITHUB_ENV
+
+      - name: Leave comment if proposed commit message is missing
+        if: ${{ env.message_filled == 'false' }}
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            <!-- PR_AUTOCOMMENT_MARKER -->
+            :warning: **Missing Proposed Commit Message**: To streamline the review process, please include a proposed commit message.
+          
+            For more details on our commit message format, see [Git Conventions](https://se-education.org/guides/conventions/git.html).
+          
+            Thank you for contributing!
 
